correct icon spacing

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -96,6 +96,7 @@ article {
   border: none;
   border-bottom: 3px solid black;
   background: inherit;
+  word-wrap: break-word;
 }
 
 .tweet-container footer {
@@ -117,6 +118,9 @@ article {
   align-content: flex-end;
   flex-direction: row;
   font-size: 16px;
+}
+.tweet-container footer .icons i {
+  padding-right: 10px;
 }
 
 .tweet-container footer .icons i:hover {
